--- a/app/src/main/res/layout/activity_country_detail.xml
+++ b/app/src/main/res/layout/activity_country_detail.xml
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/img_flag"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/lorem" />
+            tools:text="@tools:sample/lorem" />
         <TextView
             android:id="@+id/country_flag"
             android:layout_width="0dp"
@@ -49,7 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/img_flag"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/lorem" />
+            tools:text="@tools:sample/lorem" />
 
         <TextView
             android:id="@+id/capital"
@@ -61,7 +61,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/country_flag"
             app:layout_constraintStart_toStartOf="@id/country_flag"
-            tools:src="@tools:sample/last_names" />
+            tools:text="@tools:sample/last_names" />
         <TextView
             android:id="@+id/population"
             android:layout_width="0dp"
@@ -72,7 +72,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/capital"
             app:layout_constraintStart_toStartOf="@id/capital"
-            tools:src="@tools:sample/last_names" />
+            tools:text="@tools:sample/lorem" />
         <TextView
             android:id="@+id/region"
             android:layout_width="0dp"
@@ -83,7 +83,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/population"
             app:layout_constraintStart_toStartOf="@id/population"
-            tools:src="@tools:sample/last_names" />
+            tools:text="@tools:sample/lorem" />
         <TextView
             android:id="@+id/currency"
             android:layout_width="0dp"
@@ -94,7 +94,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/region"
             app:layout_constraintStart_toStartOf="@id/region"
-            tools:src="@tools:sample/last_names" />
+            tools:text="@tools:sample/lorem"/>
         <TextView
             android:id="@+id/area"
             android:layout_width="0dp"
@@ -106,6 +106,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/currency"
             app:layout_constraintStart_toStartOf="@id/currency"
-            tools:src="@tools:sample/last_names" />
+            tools:text="@tools:sample/lorem" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
