Add label to search to actionBar

--- a/app/src/main/res/layout-v23/activity_country.xml
+++ b/app/src/main/res/layout-v23/activity_country.xml
@@ -7,6 +7,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".view.CountryActivity">
+    <Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:title="@string/title_first_screen"
+        android:titleTextColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_reciclerview"
