--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
 
     <dimen name="font_size_12">14sp</dimen>
     <dimen name="font_size_16">16sp</dimen>
+    <dimen name="font_size_18">16sp</dimen>
     <dimen name="font_size_24">24sp</dimen>
 </resources>
