--- a/app/src/main/res/layout-v23/activity_country.xml
+++ b/app/src/main/res/layout-v23/activity_country.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".view.CountryActivity">
+    tools:context=".presentation.CountryActivity">
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="wrap_content"
