--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#B1AEAE</color>
-    <color name="yellow">#FFC107</color>
+    <color name="grey">#D6D2D2</color>
 </resources>
